--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/CafeCRM
-spring.datasource.username= admin
-spring.datasource.password= secret
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/CafeCRM
+spring.datasource.username=admin
+spring.datasource.password=secret
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=validate
 
+jwt.header=Authorization
+#for Hmac SHA256 need mor than 256 bits
+jwt.secret=secretKeysecretKeysecretKeysecretKey
+jwt.expiration=300
 
